--- a/uwthesis.bib
+++ b/uwthesis.bib
@@ -267,6 +267,76 @@ note = {(Accessed on 04/03/2019)}
 	note = {(Accessed on 05/09/2018)}
 }
 
+@article{ha2008cubic,
+  title={CUBIC: a new TCP-friendly high-speed TCP variant},
+  author={Ha, Sangtae and Rhee, Injong and Xu, Lisong},
+  journal={ACM SIGOPS operating systems review},
+  volume={42},
+  number={5},
+  pages={64--74},
+  year={2008},
+  publisher={ACM New York, NY, USA}
+}
+
+@misc{ORToolsG24:online,
+author = {Google},
+title = {OR-Tools  |  Google Developers},
+howpublished = {\url{https://developers.google.com/optimization}},
+month = {},
+year = {},
+note = {(Accessed on 01/26/2020)}
+}
+
+@inproceedings{de2008z3,
+  title={Z3: An efficient SMT solver},
+  author={De Moura, Leonardo and Bj{\o}rner, Nikolaj},
+  booktitle={International conference on Tools and Algorithms for the Construction and Analysis of Systems},
+  pages={337--340},
+  year={2008},
+  organization={Springer}
+}
+
+@article{mathis1997macroscopic,
+  title={The macroscopic behavior of the TCP congestion avoidance algorithm},
+  author={Mathis, Matthew and Semke, Jeffrey and Mahdavi, Jamshid and Ott, Teunis},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={27},
+  number={3},
+  pages={67--82},
+  year={1997},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{simanneal,
+author = {Bertsimas, Dimitris and Tsitsiklis, John},
+year = {1993},
+month = {02},
+pages = {},
+title = {Simulated Annealing},
+volume = {8},
+journal = {Statistical Science},
+doi = {10.1214/ss/1177011077}
+}
+
+@Inbook{spearman,
+title="Spearman Rank Correlation Coefficient",
+bookTitle="The Concise Encyclopedia of Statistics",
+year="2008",
+publisher="Springer New York",
+address="New York, NY",
+pages="502--505",
+isbn="978-0-387-32833-1",
+doi="10.1007/978-0-387-32833-1_379",
+url="https://doi.org/10.1007/978-0-387-32833-1_379"
+}
+
+@inproceedings{Ke2017LightGBMAH,
+  title={LightGBM: A Highly Efficient Gradient Boosting Decision Tree},
+  author={Guolin Ke and Qi Meng and Thomas Finley and Taifeng Wang and Wei Chen and Weidong Ma and Qiwei Ye and Tie-Yan Liu},
+  booktitle={NIPS},
+  year={2017}
+}
+
 
 @MISC{BerkleyCS294,
 	title = {Scaling Deep Learning},
@@ -1880,6 +1950,18 @@ publisher = {{USENIX} Association},
  keywords = {cloud computing, heterogeneity, virtual machine migration},
 } 
 
+@INPROCEEDINGS{5619919,
+author={K. {Ogura} and Z. {Su} and J. {Katto}},
+booktitle={2010 IEEE International Workshop Technical Committee on Communications Quality and Reliability (CQR 2010)},
+title={Implementation experiments to evaluate a new TCP congestion control supporting loss-fairness},
+year={2010},
+volume={},
+number={},
+pages={1-6},
+keywords={buffer storage;telecommunication congestion control;transport protocols;TCP congestion control;loss-fairness;RTT fairness;TCP-Libra;packet losses;window control;buffering state;bottleneck link;buffering packets;Throughput;Proposals;Protocols;Bandwidth;Receivers;Topology;Kernel;Congestion control;RTT fairn ess;Loss fairn ess},
+doi={10.1109/CQR.2010.5619919},
+ISSN={2163-5595},
+month={June},}
 
 @Inproceedings{data-center-tcp-dctcp,
 author = {Alizadeh, Mohammad and Greenberg, Albert and Maltz, Dave and Padhye, Jitu and Pate, Parveen and Prabhakar, Balaji and  and Sridharan, Murari},
@@ -2304,4 +2386,76 @@ howpublished = {\url{https://github.com/zrlio/softiwarp-for-linux-rdma}},
 month = {},
 year = {},
 note = {(Accessed on 11/06/2019)}
+}
+
+@article{patarasuk2009bandwidth,
+  title={Bandwidth optimal all-reduce algorithms for clusters of workstations},
+  author={Patarasuk, Pitch and Yuan, Xin},
+  journal={Journal of Parallel and Distributed Computing},
+  volume={69},
+  number={2},
+  pages={117--124},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@misc{glooalgo70:online,
+author = {},
+title = {gloo/algorithms.md at master · facebookincubator/gloo},
+howpublished = {\url{https://github.com/facebookincubator/gloo/blob/master/docs/algorithms.md}},
+month = {},
+year = {},
+note = {(Accessed on 01/26/2020)}
+}
+
+@article{dbt,
+author = {Sanders, Peter and Speck, Jochen and Tr\"{a}ff, Jesper Larsson},
+title = {Two-Tree Algorithms for Full Bandwidth Broadcast, Reduction and Scan},
+year = {2009},
+issue_date = {December 2009},
+publisher = {Elsevier Science Publishers B. V.},
+address = {NLD},
+volume = {35},
+number = {12},
+issn = {0167-8191},
+url = {https://doi.org/10.1016/j.parco.2009.09.001},
+doi = {10.1016/j.parco.2009.09.001},
+journal = {Parallel Comput.},
+month = dec,
+pages = {581–594},
+numpages = {14},
+keywords = {Parallel prefix (scan), Bipartite-edge coloring, Broadcast, Reduction, Message-passing parallel programming}
+}
+
+@article{tcphsfairness,
+author = {Molnár, Sándor and Sonkoly, Balázs and Trinh, Tuan},
+year = {2009},
+month = {08},
+pages = {1460-1484},
+title = {A comprehensive TCP fairness analysis in high speed networks},
+volume = {32},
+journal = {Computer Communications},
+doi = {10.1016/j.comcom.2009.05.003}
+}
+
+@InProceedings{10.1007/978-3-540-72606-7_86,
+author="Marfia, Gustavo
+and Palazzi, Claudio
+and Pau, Giovanni
+and Gerla, Mario
+and Sanadidi, M. Y.
+and Roccetti, Marco",
+editor="Akyildiz, Ian F.
+and Sivakumar, Raghupathy
+and Ekici, Eylem
+and Oliveira, Jaudelice Cavalcante de
+and McNair, Janise",
+title="TCP Libra: Exploring RTT-Fairness for TCP",
+booktitle="NETWORKING 2007. Ad Hoc and Sensor Networks, Wireless Networks, Next Generation Internet",
+year="2007",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="1005--1013",
+abstract="The majority of Internet users rely on the Transmission Control Protocol (TCP) to download large multimedia files from remote servers (e.g. P2P file sharing). TCP has been advertised as a fair-share protocol. However, when session round-trip-times (RTTs) radically differ from each other, the share (of the bottleneck link) may be anything but fair. This motivates us to explore a new TCP, TCP Libra, that guarantees fair sharing regardless of RTT.",
+isbn="978-3-540-72606-7"
 }
