Updates from Overleaf

--- a/PBox.tex
+++ b/PBox.tex
@@ -1,6 +1,6 @@
 \chapter{\pbox: a Balanced Hardware Design for Parameter Servers at Rack-Scale}
 \label{sec:phub}
-We now describe \pbox, the solution to inefficient distributed training for clusters with a flat network topology. \pbox provides a re-design of a PS at the hardware level, and mostly applies to situations where the user assumes full control over the cluster.
+We now describe \pbox, the solution to inefficient distributed training for clusters with a flat network topology (rack-level). \pbox provides a re-design of a PS at the hardware level, and mostly applies to situations where the user assumes full control over the cluster. We start with the current problem with the PS software and hardware that runs it.
 
 \begin{table}
         \centering
@@ -19,7 +19,7 @@ We now describe \pbox, the solution to inefficient distributed training for clus
 		AlexNet   & 1232  &  308  & 1408    &  176  \\
 		\hline
 	\end{tabular}
-	\caption{Estimated bisection bandwidth (Gbps) lower bound on the PS side for hiding communication latency.}
+	\caption{Estimated bisection bandwidth (Gbps) lower bound on the PS side for hiding communication latency in a small cluster of 8 nodes with GTX 1080 Ti.}
 	\label{table:bwReqDC}
 \end{table}
 
@@ -66,7 +66,7 @@ We prototyped \pbox using an off-the-shelf server platform that was configured t
 \label{sec:hierarchicalReduction}
 To extend service coverage of a single \pbox device, we associate a \pbox with a ToR during deployment, for two reasons. First, full bisection bandwidth is achievable for machines in the same rack, making it ideal for a central reduction entity as \pbox, while oversubscription occurs between the ToR and the cluster network. Second, as we show later, a single \pbox has enough scalability for a typical rack of worker machines.
 
-When provisioned in each rack (Figure \ref{fig:pBoxDeployment}), pbox{}es can form an array of sharded PSs, or run a \textit{hierarchical reduction} algorithm for a training task that spans multiple racks through the coordination of a connection manager. Hierarchical reduction works in three steps: first, each \pbox centrally aggregates gradient updates from workers in the same rack; then, the \pbox{} nodes start cross-rack aggregation and compute globally aggregated gradients; finally, each per-rack \pbox runs an optimizer on this gradient and broadcasts the new weights back to local workers.
+When provisioned in each rack (Figure \ref{fig:pBoxDeployment}), \pbox{}es can form an array of sharded PSs, or run a \textit{hierarchical reduction} algorithm for a training task that spans multiple racks through the coordination of a connection manager. Hierarchical reduction works in three steps: first, each \pbox centrally aggregates gradient updates from workers in the same rack; then, the \pbox{} nodes start cross-rack aggregation and compute globally aggregated gradients; finally, each per-rack \pbox runs an optimizer on this gradient and broadcasts the new weights back to local workers.
 
 Hierarchical reduction trades off more rounds of communication for lower cross-rack traffic ($1/N$ with N-worker racks). We can determine when hierarchical reduction is potentially beneficial with the simple model below:
 %\[	max(\frac{N-1}{B_{bn}}, \frac{1}{B_{Wkr}})  > max(\frac{1}{B_{Wkr}}, \frac{N}{B_{PBox}}) + C\]
