--- a/uwthesis.bib
+++ b/uwthesis.bib
@@ -318,6 +318,13 @@ journal = {Statistical Science},
 doi = {10.1214/ss/1177011077}
 }
 
+@inproceedings{you2019large,
+  title={Large batch optimization for deep learning: Training bert in 76 minutes},
+  author={You, Yang and Li, Jing and Reddi, Sashank and Hseu, Jonathan and Kumar, Sanjiv and Bhojanapalli, Srinadh and Song, Xiaodan and Demmel, James and Keutzer, Kurt and Hsieh, Cho-Jui},
+  booktitle={International Conference on Learning Representations},
+  year={2019}
+}
+
 @Inbook{spearman,
 title="Spearman Rank Correlation Coefficient",
 bookTitle="The Concise Encyclopedia of Statistics",
@@ -1824,6 +1831,13 @@ title = {Deep Learning Inference in Facebook Data Centers: Characterization, Per
   timestamp = {Mon, 13 Aug 2018 16:46:33 +0200},
   biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1711-00489},
   bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{you2017large,
+  title={Large batch training of convolutional networks},
+  author={You, Yang and Gitman, Igor and Ginsburg, Boris},
+  journal={arXiv preprint arXiv:1708.03888},
+  year={2017}
 }
 
 @inproceedings{You:2018:ITM:3225058.3225069,
