--- a/EvaluationPHub.tex
+++ b/EvaluationPHub.tex
@@ -1,5 +1,5 @@
 \chapter {Evaluation}
-We now evaluate the effectiveness of \pbox, \phub and \plink in their perspective environments in accelerating distributed training workloads.
+We now evaluate the effectiveness of \pbox, \phub, \plink and \cmpi in their perspective environments in accelerating distributed training workloads.
 
 \section{Effectiveness of \phub and \pbox}
 We added support for \phub{}'s API to MxNet, replacing its PS. We evaluated \phub by comparing it to MxNet's unmodified PS. We had five goals in our evaluation: (1) to assess the impact of \phub software and the \pbox hardware on training throughput, (2) to identify the importance of each optimization, (3) to determine the limits of \pbox, (4) to evaluate effectiveness of \pbox as a rack-scale service. and (5) to demonstrate the cost-effectiveness of the \phub.
