--- a/EvaluationPLinkCollectives.tex
+++ b/EvaluationPLinkCollectives.tex
@@ -1,6 +1,6 @@
 
 \section{Effectiveness of PLink Collectives}
-We evaluate the effectiveness of \cmpi with a series of microbenchmarks from various communication backends and real-world applications that uses \collectives algorithms. We represent speedup by comparing the performance we get from the best rank ordering and worst rank ordering. We opt to avoid comparing with the original rank ordering because it is random, and has a wide performance distribution (Figure~\ref{fig:azringperformance}).
+We evaluate the effectiveness of \cmpi with a series of microbenchmarks from various communication backends and real-world applications that uses \collectives algorithms, in public clouds. We represent speedup by comparing the performance we get from the best rank ordering and worst rank ordering. We opt to avoid comparing with the original rank ordering because it is random, and has a wide performance distribution (Figure~\ref{fig:azringperformance}).
 
 \subsection{Experimental Setup}
 Our experiments are conducted on two public clouds, \azure and \ectwo. We enable network acceleration on both clouds, and set TCP congestion control protocol to DCTCP. We include microbenchmarks that exercise ring, having doubling, double binary tree and bcube algorithms.  All experiments run on Ubuntu 19 with kernel 5. We mainly focus our evaluation on one of the most important \collectives tasks, \textit{allreduce} for its popularity and generality. %We use unmodified Facebook Gloo~\cite{glooalgo70:online}, OSU MPI microbenchmark~\cite{10.1007/978-3-642-33518-1_16} and Nvidia NCCL~\cite{NVIDIACo76:online} with OpenMPI 4. We use lightgbm~\cite{Ke2017LightGBMAH} to evaluate the real-world impact of \cmpi. 
